--- a/templates/home.html
+++ b/templates/home.html
@@ -1,1 +1,22 @@
-Hellod world 
+{% extends "./base.html" %}
+
+{% block content %}
+  <div class="container col-lg-5 col-md-12">
+    <h1 class="text-center my-4" >Último Post</h1>
+    {% for post in posts %}
+    <div class="card mb-3 ">
+      <img src="{{post.image.url}}" class="card-img-top">
+      <div class="card-body">
+        <h5 class="card-title">{{post.author}}</h5>
+        <p class="card-text">{{post.description}}</p>
+      </div>
+
+      <div class="card-footer">
+        <p class="card-text">
+          <small class="text-muted">{{post.published}}</small>
+        </p>
+      </div>
+    </div>
+    {% endfor %}
+  </div>
+{% endblock %}
